# CAIWEI-HTC-D

./: README.md
HTC-D/: CMakeLists.txt  package.xml
HTC-D/launch/: hand_bringup.launch
HTC-D/scripts/: Kalman_Filter.py  hand_drive.py  hand_drive_init.py  joint_state_publiser_controller.py  test_serial.py
hardware/Mechanism/: 1_L.SLDPRT  2_L.SLDPRT  3_L.SLDPRT  5_L.SLDPRT  Bearing_F6700ZZ.SLDPRT  Bearing_S.SLDPRT  P3.SLDPRT  PCB1.SLDPRT  PCB2.SLDPRT  base_L_4.SLDPRT  base_L_5.SLDPRT  base_L_5_Z.SLDPRT  base_L_6.SLDPRT  base_L_7.SLDPRT  hand_model.SLDPRT  magnet.SLDPRT  p1.SLDPRT  p2.SLDPRT  readme.md  ring.SLDPRT  ring_T.SLDPRT
hardware/Mechanism/Installation/: Assembly1.SLDASM  Assembly2.SLDASM  Assembly3.SLDASM
hardware/PCB/: readme.md
hardware/PCB/VR_hand/: PCB1.PcbDoc  PcbLib1.PcbLib  Schlib1.SchLib  Sheet1.SchDoc  VR_hand.PrjPcb  原件表.xlsx
hardware/PCB/VR_hand_Controller/: PCB1.PcbDoc  PcbLib1.PcbLib  Schlib1.SchLib  Sheet1.SchDoc  VR_hand_Controller.PrjPcb  元件表.xlsx
hardware/STM32/: readme.md
hardware/STM32/VR_hand_F/: .mxproject  VR_hand_F.ioc
hardware/STM32/VR_hand_F/MDK-ARM/: VR_hand_F.uvguix.李伟  VR_hand_F.uvoptx  VR_hand_F.uvprojx  startup_stm32f103xe.lst
sr_description/: CMakeLists.txt  hand.rviz  package.xml
sr_description/config/: shadow_hand_joint_limit_config.yaml  shadow_hand_name_id_config.yaml
sr_description/launch/: display.launch
sr_description/meshes/arm_and_hand_meshes/duplicate_geoms/: FF_knuckle.xml  LF1.xml  LF2.xml  LF3.xml
sr_description/urdfs/: shadowhand_motor.urdf  shadowhand_motor_left.urdf
(+53 files in other folders)
