<package format="2">>
  <name>sr_description</name>
  <version>1.0.0</version>
  <description>sr_description contains the description for Shadow Robot's Hand and Arm, as well as some additional models used in our robot (kinect, etc...).</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_description</url>
  <url type="repository">https://github.com/shadow-robot/sr_common</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_common/issues</url>
  <author>Ugo Cupcic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
</package>